<resources>
    <string name="app_name">Baby Needs</string>
    <string name="drop_table">\"DROP TABLE IF EXIST \"</string>
    <string name="add_item_button">add item button</string>
    <string name="add_item">add Item</string>
    <string name="enter_item_name">enter item name</string>
    <string name="enter_item_quantity">enter item quantity</string>
    <string name="enter_item_color">enter item color</string>
    <string name="enter_item_size">enter item size</string>
    <string name="add">ADD</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_items">ADD ITEMS</string>
</resources>