<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/item_name_input"
            android:background="@drawable/input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_item_name"
            android:textSize="25sp"
            android:layout_margin="25dp"
            android:autofillHints="@string/enter_item_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/item_qte_field"
            android:background="@drawable/input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints=""
            android:textSize="25sp"
            android:layout_margin="25dp"
            android:hint="@string/enter_item_quantity"
            />
        <EditText
            android:id="@+id/item_color_input"
            android:background="@drawable/input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_item_color"
            android:autofillHints="@string/enter_item_color"
            android:textSize="25sp"
            android:inputType="text"
            android:layout_margin="25dp"
            />
        <EditText
            android:id="@+id/item_size_field"
            android:background="@drawable/input_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="25sp"
            android:layout_margin="25dp"
            android:autofillHints="@string/enter_item_size"
            android:hint="@string/enter_item_size"
            />

        <Button
            android:id="@+id/add_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="25sp"
            android:background="@color/btn_background"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>