<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/update_item_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:autofillHints="@string/enter_item_name"
            android:background="@drawable/input_fields"
            android:hint="@string/enter_item_name"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/update_item_qte_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:autofillHints=""
            android:background="@drawable/input_fields"
            android:hint="@string/enter_item_quantity"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/update_item_color_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:autofillHints="@string/enter_item_color"
            android:background="@drawable/input_fields"
            android:hint="@string/enter_item_color"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/update_item_size_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:autofillHints="@string/enter_item_size"
            android:background="@drawable/input_fields"
            android:hint="@string/enter_item_size"
            android:inputType="number"
            android:textSize="18sp" />

        <Button
            android:id="@+id/update_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textStyle="bold"
            android:textSize="25sp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>