<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_size"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/item_qte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_size"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/item_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_size"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/item_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_size"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/create_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_item_size"
            android:textSize="17sp"
            android:textColor="@color/gray"
            android:textStyle="normal"
            android:layout_marginLeft="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_item_btn"
                android:layout_marginRight="20dp"
                android:text="@string/delete" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update_item_btn"
                android:layout_marginLeft="20dp"
                android:text="@string/update"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>